--- a/docker-compose/dotnet/app/Views/Home/Index.cshtml
+++ b/docker-compose/dotnet/app/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var datum in (List<NewTableModel>)ViewData["List"]){
+                @foreach (var datum in (List<SampleModel>)ViewData["List"]){
                     <tr>
                         <td>@datum.Id </td>
                         <td>@datum.Title </td>
